gcc/testsuite/rust/rustc/ui/did_you_mean/issue-41679-tilde-bitwise-negation-attempt.rs
// run-rustfix

fn main() {
    let _x = ~1; // { dg-error "" "" { target *-*-* } }
}

